fix image squish@

--- a/resources/css/variables.scss
+++ b/resources/css/variables.scss
@@ -107,7 +107,7 @@ body {
 .image img {
     //max-height: 100vh;
     //width: auto;
-    display: inline-block
+    display: inline-block;
 }
 
 a.nav-link {
